# modmail

./: README.md  docker-compose.yml  pyproject.toml
.github/workflows/: format.yml
bot/: bot.py  config.py
bot/database/: config.py  database.py
